--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,10 +12,12 @@
   <script src="lib/jasmine-3.1.0/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="src/Frame.js"></script>
+  <script src="src/frame.js"></script>
+  <script src="src/bowling.js"></script>
 
   <!-- include spec files here... -->
-  <script src="spec/FrameSpec.js"></script>
+  <script src="spec/frameSpec.js"></script>
+  <script src="spec/bowlingSpec.js"></script>
 
 </head>
 
